made artist info related xml & concert info related xml

--- a/app/src/main/res/layout/content_concert.xml
+++ b/app/src/main/res/layout/content_concert.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,6 +7,184 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_concert"
-        tools:context=".activities.info.ConcertActivity">
+        tools:context=".activities.info.ConcertActivity"
+        android:orientation="vertical"
+        android:layout_marginHorizontal="16dp">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:lineSpacingExtra="9sp"
+            tools:text="출연진"
+            android:textStyle="bold"/>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginTop="0.7dp"
+          android:background="#999999"
+    />
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <TextView
+            android:id="@+id/btn_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="#666666"
+            android:lineSpacingExtra="2sp"
+            android:text="전체보기"
+            android:layout_marginTop="4.4dp"
+            android:layout_gravity="right"
+    />
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:lineSpacingExtra="9sp"
+            tools:text="일정내용"
+            android:textStyle="bold"
+            android:layout_marginTop="2.7dp"/>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginTop="0.7dp"
+          android:background="#999999"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="공연시간"
+            android:layout_marginTop="13.8dp"/>
+    <TextView
+            android:id="@+id/tv_concert_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="2018년 12월 23일 (일) 19:00"
+            android:layout_marginTop="13.8dp"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="티켓가격"
+            android:layout_marginTop="17.4dp"/>
+    <TextView
+            android:id="@+id/tv_concert_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="스탠딩 88,000원"
+            android:layout_marginTop="13.8dp"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="출연"
+            android:layout_marginTop="17.4dp"/>
+    <TextView
+            android:id="@+id/tv_concert_cast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="지코, 페노메코, 크러쉬, 해쉬스완 등"
+            android:layout_marginTop="13.8dp"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="티켓구매"
+            android:layout_marginTop="17.4dp"/>
+    <TextView
+            android:id="@+id/tv_concert_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="concertrip.buy.com"
+            android:layout_marginTop="13.8dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        android:lineSpacingExtra="9sp"
+        tools:text="위치"
+        android:textStyle="bold"
+        android:layout_marginTop="17.8dp"/>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginTop="0.7dp"
+          android:background="#999999"/>
+
+    <TextView
+            android:id="@+id/concert_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="세종대학교 광개토대왕"
+            android:layout_marginTop="13.8dp"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:lineSpacingExtra="9sp"
+            tools:text="주의사항"
+            android:textStyle="bold"
+            android:layout_marginTop="17.8dp"/>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginTop="0.7dp"
+          android:background="#999999"/>
+
+    <TextView
+            android:id="@+id/concert_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#808080"
+            android:lineSpacingExtra="11sp"
+            tools:text="물 반입 금지
+티켓부스 오픈시간 3시
+어쩌구 저쩌구
+팔지 꼭 어쩌구"
+            android:layout_marginTop="13.8dp"/>
+
+</LinearLayout>
