--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -7,6 +7,14 @@
         android:layout_height="match_parent"
         tools:context=".activities.info.ArtistActivity">
 
+    <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
     <!--<android.support.design.widget.AppBarLayout-->
             <!--android:layout_height="wrap_content"-->
             <!--android:layout_width="match_parent"-->
@@ -21,13 +29,16 @@
 
     <!--</android.support.design.widget.AppBarLayout>-->
 
-    <include
-        android:id="@+id/content_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/content_header"
-        />
+         <include
+                android:id="@+id/content_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/content_header"
+              />
 
-    <include layout="@layout/content_artist"/>
+            <include layout="@layout/content_artist"/>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
