made notofocation related xml

--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".activities.main.fragment.NotificationFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+             tools:context=".activities.main.fragment.NotificationFragment"
+            android:orientation="vertical">
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:lineSpacingExtra="12sp"
+            tools:text="알림"
+            android:textStyle="bold"
+            android:layout_marginTop="49.6dp"
+            android:layout_marginLeft="16.9dp"
+    />
 
-</FrameLayout>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="43.9dp">
+
+    </android.support.v7.widget.RecyclerView>
+
+</LinearLayout>
