2018/12/23 MainActivity Viewpager & TabLayout 구현, content_main.xml 삭제 , 임시 DummyIcon 추가 Utillity Class 추가

--- a/app/src/main/res/layout/fragment_liked.xml
+++ b/app/src/main/res/layout/fragment_liked.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".activity.main.fragment.liked.LikedFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="16dp"
+              tools:context=".activity.main.fragment.liked.LikedFragment"
+              android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!--
+    TextView
+    R.id.recycler_view(li_concert*)
+
+    -->
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="48dp"
+            android:lineSpacingExtra="12sp"
+            tools:text="찜 목록"
+            android:text="찜 목록"/>
+    <View android:layout_width="match_parent" android:layout_height="1dp"
+          android:background="#dbdcdc"
+    />
 
-</FrameLayout>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
+</LinearLayout>
