--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,14 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".activity.main.fragment.calendar.CalendarFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent" xmlns:grid="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:padding="16dp"
+              tools:context=".activity.main.fragment.calendar.CalendarFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!--
+   Linear
+R.id.tv_month
+R.id.tv_year
+R.id.btn_notification
+R.id.recycler_view_?
+R.id.btn_change
+R.id.ly_calendar
+   R.id.ly_date
+R.id.recycler_view(li_concert*)
+TextView
+
+Item_info??(모두, 힙합페스티벌, 지코 등)
+-->
+
+    <RelativeLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="30dp">
+
+    <TextView
+            android:id="@+id/tv_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="#040000"
+            android:lineSpacingExtra="12sp"
+            tools:text="12월"
+            android:text="12월"
+    />
+
+    <TextView
+            android:id="@+id/tv_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#040000"
+            android:lineSpacingExtra="2sp"
+            android:layout_below="@id/tv_month"
+            tools:text="2018"
+            android:text="2018"
+
+    />
+
+
+        <Button android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/btn_notification"
+                android:layout_alignParentEnd="true"
+        />
+    </RelativeLayout>
+
+
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:layout_marginBottom="21dp">
+    <android.support.v7.widget.RecyclerView android:layout_width="0dp"
+                                            android:layout_height="24dp"
+                                            android:id="@+id/recycler_view_filter"
+                                            android:layout_weight="1"
+    />
+        <Button android:layout_width="40dp"
+                android:layout_height="24dp"
+                android:background="#cccccc"
+        android:text="편집" android:textSize="12sp"/>
+    </LinearLayout>
+
+
+    <GridView
+            android:layout_marginTop="10dp"
+            android:id="@+id/gridview"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:numColumns="7"
+    />
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/hello_blank_fragment"/>
-
-</FrameLayout>
+</LinearLayout>
