--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,13 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+
+<dimen name="action_bar_size">56dp</dimen>
+
+
+<dimen name="bottom_tab_layout_height">56dp</dimen>
+<dimen name="top_tab_layout_height">48dp</dimen>
+
+
+<dimen name="listview_divide_line_height">1dp</dimen>
 </resources>
