--- a/app/src/main/res/layout/li_artist_thumb.xml
+++ b/app/src/main/res/layout/li_artist_thumb.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <RelativeLayout
+            android:layout_width="wrap_content" 
+            android:layout_height="wrap_content">
 
-</android.support.constraint.ConstraintLayout>
+            <ImageView
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/iv_artist"
+                    android:layout_width="46dp"
+                    android:layout_height="46dp"/>
+            <TextView
+                    android:id="@+id/tv_artist"
+                    android:text="지코"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/iv_artist"
+                    android:textColor="#000000"
+                    android:textSize="12sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="18dp"/>
+    </RelativeLayout>
+
+</RelativeLayout>
