--- a/app/src/main/res/layout/li_concert.xml
+++ b/app/src/main/res/layout/li_concert.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13.6dp"
+            android:orientation="horizontal">
+        <ImageView
+                android:id="@+id/iv_concert"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                />
+        <RelativeLayout
+                android:layout_marginLeft="13.3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:id="@+id/tv_concert"
+                        android:textSize="15sp"
+                        android:textColor="#000000"
+                        android:text="더 몬스터 페스티벌"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"/>
+                <TextView
+                        android:id="@+id/tv_concert_tag"
+                        android:textSize="12sp"
+                        android:text="#12월 23일 #대전"
+                        android:layout_width="wrap_content"
+                        android:layout_height="18dp"/>
+            </LinearLayout>
+            <ImageView
+                    android:id="@+id/btn_like"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="46dp"
+                    android:layout_height="46dp"
+                    />
+        </RelativeLayout>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
