--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -3,11 +3,12 @@
               android:background="@android:color/darker_gray"
               android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:minHeight="68dp"
+              android:minHeight="30dp"
               android:layout_height="wrap_content"
               android:gravity="center">
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:id="@+id/tv_days"
               android:text="1"
               android:gravity="center_horizontal"/>
 </LinearLayout>
