--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".activity.main.fragment.search.SearchResultFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+                tools:context=".activity.main.fragment.search.SearchResultFragment">
 
     <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -30,7 +30,9 @@
                 <android.support.v7.widget.RecyclerView
                         android:id="@+id/ly_artist_list"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                >
                 </android.support.v7.widget.RecyclerView>
                 <TextView
                         android:id="@+id/btn_more_artist"
@@ -71,7 +73,7 @@
                         android:textSize="12sp"
                         android:textColor="#666666"
                         android:layout_marginTop="6.8dp"
-                        android:layout_marginLeft="304.8dp"
+                        android:layout_marginStart="304.8dp"
                         android:lineSpacingExtra="6sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
