--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
     <!--<include layout="@layout/content_main"/>-->
 
 
-    <android.support.v4.view.ViewPager
+    <concertrip.sopt.com.concertrip.activities.main.view.ViewPagerSwipeless
             android:id="@+id/viewPager"
             android:overScrollMode="never"
             android:layout_width="match_parent"
