--- a/app/src/main/res/layout/content_artist.xml
+++ b/app/src/main/res/layout/content_artist.xml
@@ -29,7 +29,10 @@
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+    >
 
     </android.support.v7.widget.RecyclerView>
 
