--- a/app/src/main/res/layout/item_calendar_day.xml
+++ b/app/src/main/res/layout/item_calendar_day.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-              android:background="@android:color/darker_gray"
+              android:background="@android:color/holo_blue_bright"
               android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:minHeight="30dp"
+              android:minHeight="15dp"
               android:layout_height="wrap_content"
               android:gravity="center">
     <TextView android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:id="@+id/tv_calendar_date"
-              android:text="1"
+              android:id="@+id/tv_calendar_day"
+              android:text="월"
               android:gravity="center_horizontal"/>
 </LinearLayout>
