2018/12/25 메리크리스마스!, 일부 수정

--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -65,7 +65,10 @@
                 <android.support.v7.widget.RecyclerView
                         android:id="@+id/ly_concert_list"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+
+                >
                 </android.support.v7.widget.RecyclerView>
                 <TextView
                         android:id="@+id/btn_more_list"
