--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+        android:id="@+id/ly_schedule"
               android:background="@android:color/darker_gray"
               android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:minHeight="30dp"
-              android:layout_height="wrap_content"
+              android:layout_height="match_parent"
               android:gravity="center">
     <TextView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/tv_calendar_date"
-              android:text="1"
               android:gravity="center_horizontal"/>
 </LinearLayout>
