--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        android:id="@+id/ly_schedule"
-              android:background="@android:color/darker_gray"
-              android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:minHeight="30dp"
-              android:layout_height="match_parent"
-              android:gravity="center">
-    <TextView android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/tv_calendar_date"
-              android:gravity="center_horizontal"/>
+        android:background="#fafafa"
+        android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center_horizontal"
+        xmlns:tools="http://schemas.android.com/tools">
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:id="@+id/tv_calendar"
+              tools:text="1"
+    />
+    <GridLayout
+            android:id="@+id/ly_schedule"
+            android:layout_width="wrap_content"
+            android:columnCount="3"
+            android:layout_height="wrap_content"
+    >
+    </GridLayout>
 </LinearLayout>
